fix: env name variable and api url

--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,11 @@
 PORT=3000
 
 # URL base de la API de BudgetBakers (ejemplo, ajustar según sea necesario)
-BUDGETBAKERS_API_URL=https://api.budgetbakers.com
+BUDGETBAKERS_API_URL=https://web-new.budgetbakers.com
 
 # URL de la instancia de CouchDB (ejemplo, ajustar según sea necesario)
 COUCHDB_URL=http://localhost:5984/budgetbakers_sync
 
 # Credenciales para BudgetBakers (si se usan directamente desde .env, aunque authService podría obtenerlas dinámicamente)
-# BUDGETBAKERS_USERNAME=tu_usuario
+# BUDGETBAKERS_EMAIL=tu_usuario
 # BUDGETBAKERS_PASSWORD=tu_contraseña
